@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.7.4
 ------------------------
+ o reorder phylo to postorder before ladderrize <2016-11-28, Mon>
  o allow yscale to use data stored in phylo4d object <2016-11-24, Thu>
    + https://github.com/GuangchuangYu/ggtree/issues/98
  o groupOTU method now accept 'overlap = c("overwrite", "origin", "abandon")' parameter <2016-11-16, Wed>
